1223: Fix spacing issue below menu child link - no padding needed
Checked on desktop and mobile viewport

--- a/src/css/molecules/header.scss
+++ b/src/css/molecules/header.scss
@@ -26,6 +26,7 @@
     }
 
     .mzp-c-menu-item-link {
+      padding-bottom: 0px;
       .mzp-c-menu-item-icon {
         top: 0px;
         @media #{$mq-md} {
